fixed text alignment on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
     --theme-color: #9b1154;
+    --theme-text: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .left-container {
@@ -16,6 +18,7 @@
 
 .right-container {
     margin-left: 20vw;
+    padding: 3rem;
 }
 
 li {
@@ -112,8 +115,7 @@ hr {
 }
 
 h1 {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: var(--theme-text);
     color: var(--theme-color);
     padding: 4px;
 }
@@ -135,9 +137,9 @@ h1 {
 
 .about-container {
     display: flex;
-} 
+}
 
- .languages {
+.languages {
     display: flex;
     justify-content: space-between;
 }
@@ -167,6 +169,16 @@ h1 {
     width: 370px;
     height: 198px;
 }
+
+.displayText {
+    color: var(--theme-color);
+    font-family: var(--theme-text);
+}
+
+h1.displayText {
+    text-align: center;
+}
+
 @media screen and (max-width: 500px) {
     body > .left-container {
         position: initial;
@@ -181,6 +193,12 @@ h1 {
 
     .left-container {
         width: 10rem;
+    }
+
+    .right-container {
+        padding: 0rem;
+        display: flex;
+        justify-content: center;
     }
 
     .icon-logo {
@@ -217,8 +235,7 @@ h1 {
         width: 200px;
     }
 
-    .icon-logo{
+    .icon-logo {
         height: 120px;
     }
-
 }
